[project]
name = "meshtop"
version = "0.7.0"
description = "GPS bridge for Meshtastic devices — serial, BLE, TCP and LoRa/MQTT sources with APRS-IS, pi-star, gpsd and rigtop sinks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleak>=3.0.1",
    "cryptography>=46.0.7",
    "loguru>=0.7.3",
    "meshtastic>=2.7.8",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "pynmea2>=1.19",
    "pyserial>=3.5",
    "rich>=15.0.0",
    "textual>=8.2.3",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "pylint>=4.0.5",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
meshtop = "meshtop.cli:app"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "SIM", "RUF", "PTH", "PIE", "TRY", "G", "C4", "PERF",
]
ignore = [
    "RUF001",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM114",
    "TRY003",
    "TRY301",
    "PIE790",
    "G004",
]

[tool.commitizen]
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

[tool.pylint.main]
py-version = "3.14"
jobs = 0

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "import-outside-toplevel",
    "protected-access",
    "fixme",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 12
max-bool-expr = 6
